menu: display result from connection

--- a/resources/localization/Multiworld.txt
+++ b/resources/localization/Multiworld.txt
@@ -4,6 +4,8 @@ lang: en
 option/server: Server IP:
 option/name: Player name:
 option/password: Password:
+result/connect: Attempting to connect...
+result/fail: Failed to connect:
 
 # Items
 item/given: Received
