--- a/resources/localization/Multiworld.txt
+++ b/resources/localization/Multiworld.txt
@@ -5,6 +5,7 @@ option/server: Server IP:
 option/name: Player name:
 option/password: Password:
 result/connect: Attempting to connect...
+result/skip: Skipping connection...
 result/fail: Failed to connect:
 
 # Items
